fixed section 1 spacing

--- a/HW-1/styles.css
+++ b/HW-1/styles.css
@@ -57,24 +57,25 @@ body {
 #section-1 {
     width: 100%;
     color: #fff;   
-    margin-top: 20px;   
-    margin-left: 1em;
-    margin-right: 1em;
+    margin-top: 20px auto 20px auto;
+    margin-bottom: 20px;
     padding: 2em;
     text-align: center;
+    font-size: 1em;
     background-color: rgba(120, 120, 120, 0.7);
 }
 
 #section-2 {
     width: 100%;
     color: #fff;    
-    margin-top: 20px;   
+    margin-top: 10px;   
     max-height: 60%;
     margin-left: 1em;
     margin-right: 1em;
     padding: 2em;
     text-align: center;
-    background-color: rgba(120, 120, 120, 0.7);
+    font-size: 1em;
+    /* background-color: rgba(120, 120, 120, 0.7); */
 }
 
 #section-1 h1 {
